padding on mobile top fixed

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body, html {
   background-image: url(./images/the-creative-exchange-d2zvqp3fpro-unsplash.jpg);
   background-size: cover;
   height: 100vh;
+  padding-top: 40px;
 }
 
 .hero-text {
